Fix minor layout problem

--- a/css/about.css
+++ b/css/about.css
@@ -327,5 +327,6 @@
 
   .copyright1835 {
     padding-top: 32px;
+    padding-right: 40px;
   }
 }
