--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@
 
 .copyright1835 {
   padding-top: 93px;
+  padding-right: 20px;
 }
 
 .flexbox3 {
